busybox-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox-nginx
  template:
    metadata:
      labels: 
        app: busybox-nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
