multitool-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multitool
  namespace: lesson1-4
spec:
  containers:
  - name: multitool
    image: wbitt/network-multitool
    ports:
      - containerPort: 8080
