nginx-multitool-deploy-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deploy
  namespace: lesson2-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lbl
  template:
    metadata:
      labels:
        app: lbl
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: port-nginx
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: port-multitool
