busybox-nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: busybox-nginx-svc
spec:
  selector:
    app: busybox-nginx
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 80
