cache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: app # lesson3-3
spec:
  selector:
    matchLabels:
      app: cache
  replicas: 1
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
          name: port-multitool
---
apiVersion: v1
kind: Service
metadata:
  name: cache-svc
  namespace: app # lesson3-3
spec:
  selector:
    app: cache
  ports:
    - name: port-cache-svc
      protocol: TCP
      port: 9002
      targetPort: port-multitool
