netology-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: netology-svc
spec:
  selector:
    app: web
  ports:
    - port: 8081
      targetPort: 8080
