nginx-multitool-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
  namespace: lesson1-4
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: port-nginx-svc
      protocol: TCP
      port: 9001
      targetPort: port-nginx
    - name: port-multitool-svc
      protocol: TCP
      port: 9002
      targetPort: port-multitool
  type: ClusterIP
