nginx-multitool-svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc-2
  namespace: lesson1-4
spec:
  selector:
    app: nginx-multitool
  ports:
    - name: port-nginx-svc
      protocol: TCP
      port: 9001
      nodePort: 30001
      targetPort: port-nginx
    - name: port-multitool-svc
      protocol: TCP
      port: 9002
      nodePort: 30002
      targetPort: port-multitool
  type: NodePort
