nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: lesson2-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
          name: port-nginx
        volumeMounts:
        - name: web-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-html
        configMap:
          name: nginx-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: lesson2-3
spec:
  selector:
    app: web
  ports:
    - name: port-nginx-svc
      protocol: TCP
      port: 80
      targetPort: port-nginx
  type: ClusterIP
