forbid-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forbid-ingress
  namespace: app
spec:
  podSelector: {}
  ingress: []
  policyTypes:
  - Ingress
