frontend-to-backend-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-to-backend-policy
  namespace: app # lesson3-3
spec:
  podSelector:
    matchLabels:
      app: back
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: front
      ports:
        - protocol: TCP
          port: port-multitool
